[wix-image] fix image on Safari < 15 - aspectRatio polyfill (#4363)
* [wix-image] fix image on Safari < 15 - aspectRatio polyfill

* css custom properties

* placeholderTransition

* seperate styles

* trust Michelle Barker with my life :)

* wip

* set the custom properties directly

--- a/packages/plugin-image/web/statics/styles/image-viewer.rtlignore.scss
+++ b/packages/plugin-image/web/statics/styles/image-viewer.rtlignore.scss
@@ -40,6 +40,31 @@ $opacityTransition: opacity 0.8s ease;
   overflow: hidden;
 }
 
+.imageRatio {
+  width: 100%;
+  aspect-ratio: var(--dim-width) / var(--dim-height);
+
+  @supports not (aspect-ratio: 1 / 1) {
+    //Fix for Safari - aspect-ratio is not supported for Safari < 15
+    position: relative;
+
+    &::before {
+      display: block;
+      content: '';
+      width: 100%;
+      padding-bottom: calc((var(--dim-height) / var(--dim-width)) * 100%);
+    }
+
+    > :first-child {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+    }
+  }
+}
+
 .image {
   display: block;
   width: 100%;
